--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <slf4j.version>1.7.25</slf4j.version>
+    <flying-saucer-pdf.version>9.1.16</flying-saucer-pdf.version>
+    <itextpdf.version>5.5.13</itextpdf.version>
   </properties>
 
   <dependencyManagement>
@@ -38,6 +40,22 @@
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>${slf4j.version}</version>
+        <optional>true</optional>
+      </dependency>
+
+      <!-- 渲染 css 样式 -->
+      <dependency>
+        <groupId>org.xhtmlrenderer</groupId>
+        <artifactId>flying-saucer-pdf</artifactId>
+        <version>${flying-saucer-pdf.version}</version>
+        <optional>true</optional>
+      </dependency>
+      <!-- iText,export pdf -->
+      <dependency>
+        <groupId>com.itextpdf</groupId>
+        <artifactId>itextpdf</artifactId>
+        <version>${itextpdf.version}</version>
+        <optional>true</optional>
       </dependency>
 
     </dependencies>
@@ -54,11 +72,22 @@
       <groupId>org.apache.poi</groupId>
       <artifactId>poi-ooxml</artifactId>
     </dependency>
-    <!--poi-ooxml-->
+    <!--slf4j-->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
+    <!-- 渲染 css 样式 -->
+    <dependency>
+      <groupId>org.xhtmlrenderer</groupId>
+      <artifactId>flying-saucer-pdf</artifactId>
+    </dependency>
+    <!-- iText,export pdf -->
+    <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>itextpdf</artifactId>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -126,18 +155,15 @@
         </excludes>
       </resource>
       <resource>
-        <directory>${project.basedir}/src/main/resources</directory>
-        <filtering>true</filtering>
-        <excludes>
-          <exclude>dev/*</exclude>
-          <exclude>prod/*</exclude>
-          <exclude>pre/*</exclude>
-          <exclude>test/*</exclude>
-        </excludes>
-      </resource>
-      <resource>
-        <directory>${project.basedir}/src/main/resources/</directory>
-      </resource>
+      <directory>${basedir}/src/main/resources</directory>
+      <filtering>true</filtering>
+      <excludes>
+        <exclude>**/*</exclude>
+      </excludes>
+    </resource>
+    <resource>
+      <directory>${project.basedir}/src/main/resources/</directory>
+    </resource>
     </resources>
     <testResources>
       <testResource>
@@ -150,10 +176,7 @@
         <directory>${project.basedir}/src/test/resources</directory>
         <filtering>true</filtering>
         <excludes>
-          <exclude>dev/*</exclude>
-          <exclude>prod/*</exclude>
-          <exclude>pre/*</exclude>
-          <exclude>test/*</exclude>
+          <exclude>**/*</exclude>
         </excludes>
       </testResource>
     </testResources>
